--- a/baseball-game/src/main/resources/application.properties
+++ b/baseball-game/src/main/resources/application.properties
@@ -20,6 +20,9 @@ spring.datasource.driver-class-name=org.postgresql.Driver
 spring.mvc.view.prefix=/WEB-INF/views/
 spring.mvc.view.suffix=.jsp
 
+# 실행되는 SQL 쿼리를 콘솔에 출력
+spring.jpa.show-sql=true
+
 # 정적 리소스 캐싱 비활성화 (개발 중 편리)
 spring.web.resources.cache.cachecontrol.no-cache=true
 spring.web.resources.cache.cachecontrol.no-store=true
