--- a/baseball-game/src/main/resources/application.properties
+++ b/baseball-game/src/main/resources/application.properties
@@ -22,6 +22,10 @@ spring.mvc.view.suffix=.jsp
 
 # 실행되는 SQL 쿼리를 콘솔에 출력
 spring.jpa.show-sql=true
+logging.level.org.hibernate.SQL=debug
+logging.level.org.hibernate.type.descriptor.sql=trace
+
+spring.jpa.properties.hibernate.format_sql=true
 
 # 정적 리소스 캐싱 비활성화 (개발 중 편리)
 spring.web.resources.cache.cachecontrol.no-cache=true
